--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --watch aula20/hello-world.ts"
+    "dev": "ts-node-dev aula20/hello-world.ts"
   },
   "keywords": [],
   "author": "",
